﻿Changelog
2.0
Fixed the archive page to know the difference between a permalink category and non-permalink cat=
fixed site_url to home_url in the header.php thanks @mike on the forums
added layouts so you can switch between a few different layouts
control panel widget change to use wp_login_form()

1.1.7
Removed the pre_get_posts completely, now the blog loop has its own post type section which handles what displays there and the rss feed has a pre_get_posts for that in functions/syndication.php
fixed the members only code to properly update for wordpress 3.1+
added twitter, facebook and MSN to the the profile pages for everyone
added option to make the archive pages display as text links instead of full posts
on 404 pages moved the title out of the post area to keep consistant with site design elements
fixed the displaying of the navigation on list pages 
fixed the easel_display_content function with @gisse's help from the forums
also with Gisse's help we squashed a bug with the post type thinking the home page was is_archive
fixed the author pages to display the proper information


1.1.6
removed that changelog.php template that shouldnt have been there
CSS Cleanups
moved back to red links
added custom image header ability (in testing, locks up sometimes?)If it looks like its locking up, its because its a bug with wordpress
where /wp-admin/themes.php?page=custom-header&step=1  the URL line is missing the &step=1
fixed some text-domains which were not easel
fixed links to frumph.net/easel for the theme_uri in footer and style.css

1.1.5
added class .sidebar-no-widgets to handle the sidebar no widgets boxes instead of being static
changed .pagetitle to .page-title to be uniformative with the rest of the site
removed the "count" on how many entries are found during search and archive, added extra unnecessary load
the feed wasnt able to seperate post_types until now ;/ done
added support for custom support type archive loop